2014-03-12  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DRenderer.cpp:
	* X3DViewer.cpp:
	* X3DLayerNode.cpp:
	* Fog.h:
	* NavigationInfo.h:
	* NavigationInfo.cpp:
	* X3DViewpointNode.cpp:
	* X3DFogObject.h:
	* X3DFogObject.cpp:
	* X3DBackgroundNode.h: 

2014-03-12  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DViewer.cpp: 

2014-03-12  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DOutput.h:
	* X3DOutput.cpp:
	* X3DFieldDefinition.h:
	* X3DFieldDefinition.cpp: 

2014-03-12  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DOutput.h:
	* X3DOutput.cpp: 

2014-03-12  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DOutput.h:
	* Geospatial.h:
	* X3DOutput.cpp:
	* X3DConstants.h:
	* TraverseType.h:
	* SceneLoader.cpp:
	* Generator.h:
	* UnitArray.h:
	* FontConfig.h:
	* ViewerType.h:
	* X3DExecutionContext.cpp:
	* X3DLayoutNode.h:
	* X3DFontStyleNode.h:
	* MultiTexture.h:
	* NavigationInfo.h:
	* NavigationInfo.cpp:
	* TextureProperties.h:
	* ParticleSystem.h: 

2014-03-11  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DBindableNode.h:
	* X3DBindableNode.cpp: 

2014-03-11  Holger Seelig  <holger.seelig@yahoo.de>

	* Makefile.am:
	* libtitania-x3d.cproj:
	* X3DConstants.h:
	* World.cpp:
	* X3DBaseNode.h:
	* X3DBaseNode.cpp:
	* TransformHandle.h:
	* TransformHandle.cpp:
	* Transform.h:
	* X3DBindableNode.h:
	* X3DBindableNode.cpp:
	* GeoLocation.h:
	* GeoTransform.h:
	* GeoLocation.cpp:
	* X3DTransformNode.h:
	* GeoTransform.cpp:
	* jsX3DConstants.h:
	* X3DTransformNode.cpp:
	* jsX3DConstants.cpp:
	* X3DGeospatialObject.cpp:
	* Background.cpp:
	* X3DTransformMatrix4DNode.h:
	* X3DTransformMatrix4DNode.cpp: 

2014-03-10  Holger Seelig  <holger.seelig@yahoo.de>

	* MediaStream.h:
	* MediaStream.cpp:
	* ShaderPart.cpp:
	* ShaderProgram.cpp:
	* jsContext.cpp: 

2014-03-08  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DBrowser.cpp: 

2014-03-08  Holger Seelig  <holger.seelig@yahoo.de>

	* Keys.h:
	* Keys.cpp: 

2014-03-08  Holger Seelig  <holger.seelig@yahoo.de>

	* LineSet.h: